<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.freegeek.jzzh.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyStyle.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/MyStyle.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/app_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/CardListSingleLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_info_grey_600_24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginLeft="32dp"
                            android:orientation="vertical"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                            <TextView
                                android:id="@+id/app_version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version_code"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_feedback"
                        style="@style/CardListSingleLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_email_grey_600_24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginLeft="32dp"
                            android:orientation="vertical"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/feedback"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_code"
                        style="@style/CardListSingleLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClick">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/ic_github_circle_grey_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginLeft="32dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:text="@string/source_code"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/CardListSingleLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginTop="16dp"
                            app:srcCompat="@drawable/ic_bookmark_black_24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginLeft="32dp"
                            android:orientation="vertical"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                android:text="@string/hint"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hint_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
